syntax = "proto3";

package inspection;

option go_package = "github.com/alechekz/online-car-auction/services/inspection/delivery/grpc/proto:proto";

import "google/api/annotations.proto";

service InspectionService {
  rpc GetBuildData(GetBuildDataRequest) returns (BuildDataResponse) {
    option (google.api.http) = {
      get: "/inspection/get-build-data/{vin}"
    };
  }

  rpc InspectVehicle(InspectVehicleRequest) returns (InspectVehicleResponse) {
    option (google.api.http) = {
      post: "/inspection/inspect"
      body: "*"
    };
  }
}

message GetBuildDataRequest {
  string vin = 1;
}

message BuildDataResponse {
  string vin = 1;
  string brand = 2;
  string engine = 3;
  string transmission = 4;
  uint64 msrp = 5;
}

message InspectVehicleRequest {
  string vin = 1;
  int32 year = 2;
  int32 odometer = 3;
  bool small_scratches = 4;
  bool strong_scratches = 5;
  bool electric_fail = 6;
  bool suspension_fail = 7;
}

message InspectVehicleResponse {
  string vin = 1;
  int32 grade = 2;
}